--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-typewriter-effect": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
