--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.29.0",
     "react-typewriter-effect": "^1.1.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
