--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "framer-motion": "^10.16.5",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.0.4",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
