--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.8.1",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
@@ -27,8 +28,11 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-tsparticles": "^2.12.2",
     "react-typewriter-effect": "^1.1.0",
     "slick-carousel": "^1.8.1",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
